# ROSRagnarEDU

./: .gitignore  README.md
kinematics/: RagnarSolution.cpp  RagnarSolution.h
ragnar_drivers/: CMakeLists.txt  package.xml
ragnar_drivers/config/: ragnar_joint_names.yaml
ragnar_drivers/launch/: display.launch  ragnar_state_listener.launch  ragnar_streaming_interface.launch
ragnar_drivers/src/: action_test_node.cpp  ragnar_client.cpp  ragnar_joint_feedback_message.cpp  ragnar_joint_streamer.cpp  ragnar_joint_streamer_node.cpp
ragnar_kinematics/: CMakeLists.txt  package.xml
ragnar_kinematics/include/ragnar_kinematics/: ragnar_kinematic_defs.h  ragnar_kinematics.h
ragnar_kinematics/src/: ragnar_demo_motions.cpp  ragnar_kinematic_defs.cpp  ragnar_kinematics.cpp  ragnar_test_demo.cpp
ragnar_kinematics_plugin/: CMakeLists.txt  package.xml
ragnar_kinematics_plugin/src/: ragnar_kinematics_plugin.cpp
ragnar_simulator/: CMakeLists.txt  package.xml
ragnar_simulator/src/: ragnar_simulator.cpp  ragnar_simulator_node.cpp  ragnar_simulator_test_node.cpp
ragnar_state_publisher/: CMakeLists.txt  package.xml
ragnar_state_publisher/src/: ragnar_state_publisher.cpp  ragnar_state_publisher_node.cpp
ragnar_support/: CMakeLists.txt  package.xml  urdf.rviz
ragnar_support/launch/: bringup.launch  display.launch  gazebo.launch  simulate.launch
ragnar_support/meshes/: base_link.STL  ee_link_p.STL  ee_link_y.STL  lower_arm_1mimic_p.STL  lower_arm_1mimic_y.STL  lower_arm_1p.STL  lower_arm_2mimic_p.STL  lower_arm_2mimic_y.STL  lower_arm_2p.STL  lower_arm_2y.STL  lower_arm_3mimic_p.STL  lower_arm_3mimic_y.STL  lower_arm_3p.STL  lower_arm_3y.STL  lower_arm_4mimic_p.STL  lower_arm_4mimic_y.STL  lower_arm_4p.STL  lower_arm_4y.STL  ragnar_ee.STL  ragnar_lower_arm.stl
ragnar_support/scripts/: publish_tf
ragnar_support/src/: ragnar.cpp
ragnar_support/urdf/: ragnar.urdf  ragnar.xacro  ragnar2.urdf  ragnar_cad.urdf  ragnar_leg_macro.xacro  ragnar_macro.xacro  ragnar_upper2_macro.xacro  ragnar_upper3_macro.xacro  ragnar_upper_macro.xacro
ros_ragnar/: CMakeLists.txt  package.xml
ros_ragnar/launch/: ragnar_state_listener.launch  robot_streaming_interface.launch  test.launch
ros_ragnar/src/: joint_data.cpp  ragnar_client.cpp  ragnar_joint_feedback_message.cpp  (+5 more)
(+10 files in other folders)
